@@ -2,6 +2,7 @@ Automake was originally written by David J. MacKenzie <djm@uunet.uu.net>.
 It would not be what it is today without the invaluable help of these
 people:
 
+Adam J. Richter		adam@yggdrasil.com
 Akim Demaille		demaille@inf.enst.fr
 Alex Hornby		alex@anvil.co.uk
 Alexandre Duret-Lutz	duret_g@epita.fr
