@@ -5971,7 +5971,7 @@ sub variable_value_as_list_worker
     {
 	&am_line_error ($var, "\`$var' is target; expected variable");
     }
-    elsif (! defined $contents{$var})
+    elsif (! defined $contents{$var} && ! defined $am_var_defs{$var})
     {
 	&am_line_error ($parent, "variable \`$var' not defined");
     }
@@ -6011,6 +6011,13 @@ sub variable_value_as_list_worker
 		push (@result, &value_to_list ($var, $val, $cond));
 	    }
 	}
+    }
+    elsif (defined $am_var_defs{$var})
+    {
+	$vars_scanned{$var} = 1;
+	&variable_conditionally_defined ($var, $parent);
+	$content_seen{$var} = 1;
+	push (@result, &value_to_list ($var, $am_var_defs{$var}, $cond));
     }
     else
     {
