@@ -1,3 +1,8 @@
+2001-01-28  Tom Tromey  <tromey@redhat.com>
+
+	* automake.in (variable_value_as_list_worker): Handle entries in
+	%am_var_defs.  Fixes listval.test.
+
 2001-01-26  Akim Demaille  <akim@epita.fr>
 
 	* automake.in (handle_texinfo): Don't use $conf_pat, just
